@@ -79,9 +79,9 @@ struct grub_e820_mmap
   grub_uint32_t type;
 } __attribute__((packed));
 
-#define GRUB_VIDEO_TYPE_TEXT	0x01
-#define GRUB_VIDEO_TYPE_VLFB	0x23    /* VESA VGA in graphic mode     */
-#define GRUB_VIDEO_TYPE_EFI	0x70
+#define GRUB_VIDEO_LINUX_TYPE_TEXT	0x01
+#define GRUB_VIDEO_LINUX_TYPE_VESA	0x23    /* VESA VGA in graphic mode.  */
+#define GRUB_VIDEO_LINUX_TYPE_SIMPLE	0x70    /* Linear framebuffer without any additional functions.  */
 
 /* For the Linux/i386 boot protocol version 2.03.  */
 struct linux_kernel_header
